--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/guerrerocarlos/bitcoin-live-transactions/issues"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "debug": "^2.6.1",
     "request": "^2.79.0",
     "socket.io-client": "^1.7.3"
