--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "blockchain.info": "^2.12.1",
     "debug": "^2.6.1",
     "request": "^2.79.0",
     "socket.io-client": "^1.7.3"
